--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ appdirs==1.4.4
 greenlet==3.0.3
 lxml==5.2.1
 packaging==24.0
+plotly==5.22.0
 pyshark==0.6
 python-dotenv==1.0.1
 SQLAlchemy==2.0.30
+tenacity==8.3.0
 termcolor==2.4.0
 typing_extensions==4.11.0
