--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ packaging==24.0
 plotly==5.22.0
 pyshark==0.6
 python-dotenv==1.0.1
+psycopg2-binary==2.9.9 
 SQLAlchemy==2.0.30
 tenacity==8.3.0
 termcolor==2.4.0
